fix gallery label is not visible on Chrome

--- a/mcww_web/workflow.css
+++ b/mcww_web/workflow.css
@@ -33,7 +33,7 @@
 /* gallery */
 
 div:has(>.gallery-container)>label {
-    z-index: 1;
+    z-index: 21;
 }
 
 .gallery-container {
